# atlas-rl-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
src/atlas_rl_copilot/: __init__.py  cli.py  crew_lab.py  env_loader.py  minimax_client.py  spectral.py  training.py
tests/: test_crew_stub.py  test_minimax_client.py  test_spectral.py  test_training_smoke.py
