[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-rl-copilot"
version = "0.1.0"
description = "PPO RL on Gymnasium plus spectral diagnostics and optional CrewAI experiment advisor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ml-lubich" }]
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.24",
  "stable-baselines3>=2.0",
  "torch>=2.0",
]

[project.optional-dependencies]
crew = ["crewai>=0.28.0"]
dev = ["pytest>=8.0"]

[project.scripts]
atlas-train = "atlas_rl_copilot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_rl_copilot"]

[tool.hatch.build.targets.sdist]
include = ["src/atlas_rl_copilot", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
